# cafeman

./: Makefile  README.md  config.status
cclcfox/: Makefile.in  configure.in
cclcfox/src/: Makefile.am  Makefile.in  cclcfox.cpp  cclcfox.h  gui.cpp  gui.h  locker.cpp  lockpix.cpp  main.cpp
cclfox/: CERTIFICATES.howto  Makefile.in  configure  configure.in
cclfox/po/: POTFILES.in  es.gmo  es.po
cclfox/src/: CCLWin.cpp  CCLWin.h  CashingFrame.cpp  CashingFrame.h  LogFrame.cpp  LogFrame.h  Makefile.am  Makefile.in  MembersFrame.cpp  MembersFrame.h  NotpaidFrame.cpp  NotpaidFrame.h  ProductsFrame.cpp  ProductsFrame.h  TarifFrame.cpp  TarifFrame.h  cclfox.h  cmds.h  icons.cpp  icons.h  main.cpp  verifiers.cpp  verifiers.h
cclpfox/: configure
client/: CMakeLists.txt
client/libcclc/src/: CMakeLists.txt
client/mkahawa-client/src/: CMakeLists.txt  lockpix.cpp
gtk-mkahawa-client/src/: cmds.h  mca_info_panel.c  mca_svr_req.c
libcclc/: Makefile.in  aclocal.m4  configure  configure.in
libcclc/src/: Makefile.in  cclc.h
libccls/: Makefile.in  aclocal.m4  configure  configure.in
libccls/src/: Makefile.am  Makefile.in  ccl.c  ccl_private.h  ccls.h  client.c  data.c  logging.c  member.c  tarif.c  util.c
mkahawa-client/: Makefile.in  aclocal.m4  configure  configure.in
mkahawa-client/m4/: Makefile.in
mkahawa-client/src/: Makefile.am  Makefile.in  cclcfox.cpp  cclcfox.h  cmds.h  gui.cpp  locker.cpp  locker.h  lockpix.cpp  lockpix.h  main.cpp
mkahawa-printer/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.in
mkahawa-printer/m4/: Makefile.in
mkahawa-printer/po/: es.po
mkahawa-printer/src/: Makefile.am  Makefile.in
mkahawa-srv/: Makefile.in  aclocal.m4  configure  configure.in
mkahawa-srv/m4/: Makefile.in
mkahawa-srv/po/: LINGUAS  Makefile.in.in  POTFILES.in  es.gmo  es.po  in_ID.po
mkahawa-srv/src/: CCLWin.cpp  CCLWin.h  CashingFrame.cpp  EmployeesFrame.cpp  EmployeesFrame.h  LogFrame.cpp  Makefile.am  Makefile.in  MembersFrame.cpp  MembersFrame.h  ProductsFrame.cpp  QTicketsBox.cpp  QTicketsBox.h  ReportFrame.cpp  SettingsBox.cpp  SettingsBox.h  TarifFrame.cpp  TicketsBox.cpp  TicketsBox.h  cclfox.h  cmds.h  icons.cpp  icons.h  main.cpp  update.h  verifiers.h
po/: es.gmo
server/: CMakeLists.txt
server/libccls/: CMakeLists.txt
server/libccls/src/: CMakeLists.txt
server/mkahawa-srv/: configure.in
server/mkahawa-srv/src/: CMakeLists.txt
src/: Makefile.am  Makefile.in  lockpix.cpp
