bin_PROGRAMS=cclfox

cclfox_SOURCES= \
CCLWin.cpp \
CCLWin.h \
CCLIconItem.cpp \
CCLIconItem.h \
ProductsFrame.cpp \
ProductsFrame.h \
CashingFrame.cpp \
CashingFrame.h \
TarifFrame.cpp \
TarifFrame.h \
MembersFrame.cpp \
MembersFrame.h \
NotpaidFrame.cpp \
NotpaidFrame.h \
LogFrame.cpp \
LogFrame.h \
verifiers.cpp \
verifiers.h \
icons.cpp \
icons.h \
cmds.h \
cclfox.h \
main.cpp

INCLUDES = -I/usr/local/include
